# rsdo

./: Cargo.toml  LICENSE  README.md  build.rs
.github/: dependabot.yml
.github/scripts/: build_and_test.sh  changelog.sh  check_docs_links.sh  check_release.sh  commit_and_tag.sh  configure_git.sh  create_github_release.sh  generate_changelog.sh  generate_sbom.sh  generate_version.sh  pre_publish_checks.sh  prepare_binary.sh  update_cargo_lock.sh  update_cargo_version.sh
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: databases.md  droplets.md  kubernetes.md  spaces.md  vpc.md
examples/: basic.rs  create_droplet.rs  get_account.rs  list_droplets.rs
src/: lib.rs
